<resources>
    <string name="app_name">projectDesignC6</string>
    <string name="text_greetings">Boa tarde</string>
    <string name="text_name_user">Arthur</string>
    <string name="text_balance">Saldo em reais</string>
    <string name="text_balance_coin">R$</string>
    <string name="text_balance_value">950,00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_button_extract">VER EXTRATO</string>
    <string name="text_offers">Ofertas</string>
    <string name="text_invite_friends">Convide seus amigos para o C6 Bank</string>
    <string name="text_share_bank">Compartilhe o banco da sua vida e divida a experiência C6 com quem você gosta</string>
    <string name="image_pix_description">Icone pix</string>
    <string name="text_pix">Pix</string>
    <string name="text_transfer">Transferir</string>
    <string name="text_contact">Contatos</string>
    <string name="text_new_transfer">Nova transferência</string>
    <string name="text_uses_limit">Limites de uso</string>
    <string name="text_search_contact">Buscar contato</string>
    <string name="text_recently">Recentes</string>
    <string name="text_register">Registrar</string>
    <string name="edit_hint_name">Nome</string>
    <string name="edit_hint_email">Email</string>
    <string name="edit_hint_cpf">Cpf</string>
    <string name="edit_hint_password">Senha</string>
    <string name="edit_hint_confirm_password">Confirme sua senha</string>
    <string name="button_register">Salvar</string>
    <string name="text_login">Login</string>
    <string name="button_login">Entrar</string>
    <string name="text_already_have_account">Já tenho uma conta</string>
    <string name="text_create_account">Criar uma conta</string>
</resources>